--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     display: none;
   }
 </style>
+<ngx-spinner bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#fff" type = "line-scale-party"></ngx-spinner>
 <form class = "form-inline">
   <div class = "form-group">
     <div class = "input-group">
@@ -11,11 +12,11 @@
       </div>
       <i class="fa fa-calendar"></i>
       <input class = "form-control" type="daterange" name="dp" [displayMonths] = "displayMonths"
-      [navigation]="navigation" [showWeekNumbers] = "showWeekNumbers" [(ngModel)] = "fromDate" 
+      [navigation]="navigation" [showWeekNumbers] = "showWeekNumbers" [(ngModel)] = "fromDate"
       [dayTemplate] = "t" (navigate)="date = $event.next" ngbDatepicker #d="ngbDatepicker">
       <input class = "form-control" type="daterange" name="dp2" [displayMonths] = "displayMonths"
-      [navigation]="navigation" [showWeekNumbers] = "showWeekNumbers" [(ngModel)] = "toDate" 
-      [dayTemplate] = "t" (navigate)="date = $event.next" ngbDatepicker #d="ngbDatepicker">      
+      [navigation]="navigation" [showWeekNumbers] = "showWeekNumbers" [(ngModel)] = "toDate"
+      [dayTemplate] = "t" (navigate)="date = $event.next" ngbDatepicker #d="ngbDatepicker">
       <div class="input-group-append d-inline-block" ngbDropdown>
         <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
         </button>
